harbor/namespace.yaml
---
{
  apiVersion: "v1",
  kind: "Namespace",
  metadata: {
    name: "harbor",
  },
}
